# MLBox

./: .dockerignore  .env.mlbox  .gitignore  .pylintrc  .python-version  .swp  CLAUDE.md  DOCKER.md  Dockerfile  Dockerfile_0  HUGGINGFACE_SETUP.md  LOGGING_README.md  MLOPS_DEPLOYMENT_GUIDE.md  QUICK_DEPLOY_REFERENCE.md  README.md  build-and-push.sh  clear_cursor_cache.sh  custom-ca.pem  deploy.sh  deploy_ray.sh  main_ray_serve.py  main_ray_serve_.py  project structure.txt  pyproject.toml  requirements.txt  setup.py  start_dev.sh  test_logger.py  test_ray_logging.py
.claude/: settings.local.json
.claude/hooks/: post_poetry_install.sh  pre_poetry_install.sh
.cursor/rules/: core.md  error-handling.mdc
.specify/memory/: constitution.md
assets/docs/: answers  for_ai  mlops-security-architecture.md  notes  progress  project tracker  prompts  questions  start-wsl-ubuntu  user-workflow
assets/json-schemas/: base-response.json  peanut-data-response.json  peanut-input.json
assets/labelguard/docs/: labelguard-requirements.md
datasets/: dataset.yaml
deployments/: labelguard_deployment.py  peanut_deployment.py  ray_serv.yaml
docs/: LOGGING_AND_MONITORING.md  labelguard-html-js-spec.md  labelguard-human-in-loop-correction-ui.md
mlbox/: settings.py
mlbox/utils/: cvtools.py  lcs.py  llm_cache.py  logger.py  metadata_collector.py
notebooks/: testsql.py
notebooks/2024-11-07-inner-rectangle/: 2024-11-07-inner-rectangle.ipynb  2024-11-07-inner-rectangle.py
notebooks/2024-11-07-mlbox-test-functions/: 2024-11-07-mlbox-test-functions.ipynb
notebooks/2024-11-07-rectangle-detection/: 2024-11-07-rectangle-detection.py
notebooks/2024-11-07-test-hf-token/: 2024-11-07-test-hf-token.ipynb
notebooks/2024-11-07-whitness/: 2024-11-07-whitness.py
notebooks/2024-11-07-yolov8seg-annotation/: 2024-11-07-yolov8seg-annotation.py
notebooks/2024-11-07-yolov8seg-test/: 2024-11-07-yolov8seg-test.py
notebooks/2024-11-11-prepare-dataset-for-trining/: prepare dataset.py
notebooks/2024-11-18-peanut-prepare-dataset-for-cls/: 2024-11-18-peanut-prepare-dataset-for-cls.py
notebooks/2024-11-18-peanut-prepare-dataset2/: 2024-11-18-peanut-prepare-dataset2.py
notebooks/2024-11-26 peanut-prepare-dataset-for-classification/: 2024-11-26 peanut-prepare-dataset-for-classification.py
notebooks/2024-11-27-test-yolo-cls/: 2024-11-27-test-yolo-cls.py
notebooks/2024-12-20-test-models/: 2024-12-20-test-models.ipynb
notebooks/2025-01-24-vide-camera/: 2025-01-24-vide-camera.py  2025-01-24-vide-camera.py_prve
scripts/: copy_paddlex_models.sh  crop_image.py  cutout_each_peanuts.py  end_of_day_commit.py  generate_requirements.sh  join_annotation_files.py  main_ray_serve.py  main_ray_serve_.py  monitor.py  monitoring.py  update_requirements.sh
services/peanuts/: a4_image_processor.py  auto_annotate_sam2.py  cutout_each_peanuts.py  join_annotation_files.py  test_peanuts_linux.py  test_peanuts_win.py  yolo8seg_test.py  yolo8seg_train.ipynb  yolo8seg_train.py
specs/001-project-spec/: spec.md
tests/: test.bat  test_cutout.py  test_detector_v3.py
utils/: cvtools.py
utils/test/: test_inner_rectangle.py  test_rectangle_detection.py  test_whitness.py
(+116 files in other folders)
