[tool.poetry]
name = "mlbox"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "<2"
opencv-python = "^4.10.0.84"
ultralytics = "^8.3.28"
ipykernel = "^6.29.5"
tqdm = "^4.67.0"
black = {extras = ["jupyter"], version = "^24.10.0"}
isort = "^5.13.2"
dvc = {extras = ["gdrive"], version = "^3.56.0"}
python-dotenv = "^1.0.1"
huggingface-hub = "^0.26.2"
ray = {extras = ["serve"], version = "^2.38.0"}
python-multipart = "^0.0.17"
certifi = "^2024.8.30"
requests = "2.27.1"
pathlib = "^1.0.1"
pyopenssl = "^24.2.1"
openpyxl = "^3.1.5"
httpx = "^0.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
