[project]
name = "mlbox"
version = "0.1.0"
description = ""
authors = [
    {name = "Vitaliy Polovyy",email = "vitaliy.polovyy@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "ray[serve] (>=2.48.0,<3.0.0)",
    "starlette (>=0.47.2,<0.48.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "jsonschema (>=4.25.0,<5.0.0)",
    "numpy (>=1.26,<2.0)",
    "opencv-python-headless (<4.12)",
    "torch @ https://download.pytorch.org/whl/cpu/torch-2.2.2%2Bcpu-cp311-cp311-linux_x86_64.whl",    
    "torchvision @ https://download.pytorch.org/whl/cpu/torchvision-0.17.2%2Bcpu-cp311-cp311-linux_x86_64.whl",
    "httpx",
    "openpyxl",
    "pandas",
    "huggingface_hub",
    "ultralytics",
    "supervision",
    "python-dotenv",
    "dataclasses-json (>=0.6.7,<0.7.0)",
    "pycocotools (>=2.0.10,<3.0.0)",
    "scipy (<1.13)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "google-cloud-vision (>=3.8.0,<4.0.0)",
    "google-cloud-documentai (>=2.35.0,<3.0.0)",
    "pyodbc (>=5.2.0,<6.0.0)",
    "paddlepaddle (==3.1.1)",
    "colorama (>=0.4.6,<0.5.0)",
    "scikit-image (>=0.25.2,<0.26.0)",
    "openai (>=1.107.3,<2.0.0)",
    "regex (>=2025.9.1,<2026.0.0)",
    "paddleocr (>=3.2.0,<4.0.0)",
    "unstructured-inference (>=1.0.5,<2.0.0)",
    "pdf2image (>=1.17.0,<2.0.0)",
    "transformers (>=4.57.1,<5.0.0)",
    "qwen-vl-utils (>=0.0.14,<0.0.15)",
    "pysbd (>=0.3.4,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.30.0"
notebook = "^7.4.4"
pytest = "^8.4.1"
black = "^25.1.0"
pylint = "^4.0.3"
[tool.poetry.dependencies]
paddlepaddle = {allow-prereleases = true}
